Merge branch 'master' into FLINK-16788